# nr-vocabularies

./: .gitignore  build.sh  compile.sh  format.sh  local_install.sh  model_app.yaml  model_metadata.yaml  run-tests.sh  setup.cfg
.github/workflows/: build.yaml  main.yaml  manual.yaml  push.yaml
data/: accessRights.xlsx  catalogue.yaml  contributorType.xlsx  countries.xlsx  institutions.xlsx  itemRelationType.xlsx  languages.xlsx  licenses.xlsx  resourceType.xlsx  resourceType_relatedItem.xlsx  subjectCategories.xlsx
nr-vocabularies/: setup.cfg
nr-vocabularies-model-builder/: setup.cfg
nr-vocabularies-ui/: setup.cfg
nr-vocabularies/nr_vocabularies/records/mappings/v7/nr_vocabularies/: nr-vocabularies-1.0.0.json
nr-vocabularies/nr_vocabularies/resources/: resource.py
nr_vocabularies/: config.py  ext.py
nr_vocabularies/fixtures/: catalogue.yaml  community-types.xlsx  community_types.yaml  contributor-types.xlsx  degree-grantors.xlsx  degree-grantors.yaml  funders.yaml  institutions.xlsx  institutions.yaml  item-relation-types.xlsx  item-relation-types.yaml  languages.xlsx  resource-types.xlsx  resource-types.yaml  rights.xlsx
nr_vocabularies/translations/cs/LC_MESSAGES/: messages.mo
nr_vocabularies/translations/en/LC_MESSAGES/: messages.mo
oarepo_vocabularies/: hvocabulary-basic.yaml
tests/: conftest.py  test_crud.py  test_datastream.py  test_import_export.py  test_load_voc.py
tests/data/: slovnik.xlsx  slovnik.yaml
