

[metadata]
name = nr-vocabularies-model-builder
version = attr:nr_vocabularies_model_builder.version.__version__
description = Model builder plugin containing model definition of nr-vocabularies
authors =


[options]
python = >=3.9
install_requires =
    oarepo-model-builder

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
oarepo_ui =
oarepo.models =
    nr-vocabularies = nr_vocabularies_model_builder.models:model.yaml

