

[metadata]
name = nr-vocabularies-ui
version = attr:nr_vocabularies_ui.version.__version__
description = UI components for nr-vocabularies
authors =


[options]
python = >=3.9
install_requires =
    oarepo-ui


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2

[options.entry_points]
oarepo_ui =
